@@ -1,4 +1,4 @@
-/* $Id: parsetagx.c,v 1.16 2006/04/07 13:21:12 inu Exp $ */
+/* $Id: parsetagx.c,v 1.17 2006/04/07 15:38:42 inu Exp $ */
 #include "fm.h"
 #include "myctype.h"
 #include "indep.h"
@@ -182,6 +182,8 @@ parse_tag(char **s, int internal)
 		while (*q && *q != '"') {
 		    if (*q != '\n')
 			Strcat_char(value, *q);
+		    else
+		        Strcat_char(value, ' ');
 		    if (!tag->need_reconstruct && is_html_quote(*q))
 			tag->need_reconstruct = TRUE;
 		    q++;
@@ -194,6 +196,8 @@ parse_tag(char **s, int internal)
 		while (*q && *q != '\'') {
 		    if (*q != '\n')
 			Strcat_char(value, *q);
+		    else
+		        Strcat_char(value, ' ');
 		    if (!tag->need_reconstruct && is_html_quote(*q))
 			tag->need_reconstruct = TRUE;
 		    q++;
